--- a/form.html
+++ b/form.html
@@ -63,7 +63,7 @@
                 </form>
             </div>
             <div class="bottom-third">
-                <button>Create Account</button>
+                <button type="submit">Create Account</button>
                 <p class="info">Already have an account? <a href="login.html">Log in.</a></p>
             </div>
 
