--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
             </div>
             <div class="form-third">
                 <p class="form-title">Let's do this</p>
-                <form action="submit_details.html" method="post">
+                <form action="submit_details.html" method="post" id="form">
                     <section>
                         <div class="group">
                         <label for="first">FIRST NAME</label>
@@ -63,7 +63,7 @@
                 </form>
             </div>
             <div class="bottom-third">
-                <button type="submit">Create Account</button>
+                <button type="submit" form="form">Create Account</button>
                 <p class="info">Already have an account? <a href="login.html">Log in.</a></p>
             </div>
 
